<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="662dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="124dp"
            android:layout_height="143dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/calc_image"
            app:srcCompat="@drawable/calculator" />

        <EditText
            android:id="@+id/edFirstvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edFirstvalue"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/edSecondvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edSecondvalue"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/ansField"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginTop="5dp"
            android:text="@string/ans"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/add_btn" />

        <Button
            android:id="@+id/subBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sub_btn" />

        <Button
            android:id="@+id/mulBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mul_btn" />

        <Button
            android:id="@+id/divBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/div_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>